# forensica-ai-sandbox

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/routers/: admin.py  analyze.py  domains.py  health.py  paraframe.py  sandbox.py
config/: settings.py
core/: crypto.py  llm_provider.py
docs/: ARCHITECTURE.md  DOMAIN_GUIDE.md  GDPR_COMPLIANCE.md  LEGAL_SETUP_CZ.md
domains/: registry.py
models/: schemas.py
nlp/: forensic_nlp.py
pipeline/: engine.py  prompts.py
sandbox/: security_engine.py
tests/: locustfile.py  test_domains.py
