[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forensica-ai-sandbox"
version = "2.0.0"
description = "Modular AI Sandbox – Financial / Forensic / Legal / Science / Raw Data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "mistralai>=1.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "cryptography>=42.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "locust>=2.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
